samples/_failures_safe/1761282999_eba77e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2de8f2ea.c: In function ‘tokenize’:
./samples/SAFE/__tmp_2de8f2ea.c:153:9: error: expected declaration or statement at end of input
  153 |         (*token_count)++;
      |         ^
./samples/SAFE/__tmp_2de8f2ea.c:153:9: error: expected declaration or statement at end of input
